Added: Microservice configuration

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,5 @@
 #default port number
-server.port=8081
+server.port=0
 #Postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=auth
 spring.datasource.username=postgres
@@ -17,4 +17,8 @@ spring.main.allow-bean-definition-overriding=true
 
 jwt.header = Authorization
 jwt.secret = proselyte
-jwt.expiration=604800
+jwt.expiration = 604800
+
+#Micro
+spring.application.name=security-service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
