--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 		<description>Demo project for Spring Boot</description>
 
 		<properties>
-			<java.version>8</java.version>
+			<java.version>17</java.version>
 			<jjwt.version>0.9.1</jjwt.version>
 			<spring-security.version>5.3.3.RELEASE</spring-security.version>
 		</properties>
@@ -24,7 +24,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
-			<version>2.6.7</version>
 		</dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -122,6 +121,16 @@
 			<version>1.7.31</version>
 		</dependency>
 
+		<!-- Micro -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>3.1.5</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
 
     </dependencies>
 
