--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -17,4 +17,8 @@ spring.main.allow-bean-definition-overriding=true
 
 jwt.header = Authorization
 jwt.secret = proselyte
-jwt.expiration=604800
+jwt.expiration = 18000
+
+#Micro
+spring.application.name=security-service
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
