--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -18,6 +18,7 @@ spring.main.allow-bean-definition-overriding=true
 jwt.header = Authorization
 jwt.secret = proselyte
 jwt.expiration = 18000
+#jwt.expiration = 60
 
 #Micro
 spring.application.name=security-service
