--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -23,3 +23,7 @@ jwt.expiration = 18000
 #Micro
 spring.application.name=security-service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+
+management.endpoint.info.enabled=true
+management.endpoints.web.exposure.include=health,metrics,prometheus,loggers
+management.metrics.enable.jvm=true
