--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 
 #Profile
 spring.profiles.active=dev
+#spring.profiles.active=prod
 #Tomcat
 spring.datasource.tomcat.initial-size=50
 spring.datasource.tomcat.max-wait=10000
