--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,5 +1,11 @@
 #default port number
 server.port=8081
+
+#Logging
+logging.level.root=INFO
+#logging.level.root=WARN
+logging.file.name=logs/serv.log
+
 #Postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres?currentSchema=auth
 spring.datasource.username=postgres
@@ -7,11 +13,13 @@ spring.datasource.password=4180
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto= validate
+
 #Flyway
 spring.flyway.url=jdbc:postgresql://localhost:5432/postgres
 spring.flyway.user=postgres
 spring.flyway.password=4180
 spring.flyway.default-schema=auth
+
 #Security
 spring.main.allow-bean-definition-overriding=true
 
@@ -24,6 +32,3 @@ jwt.expiration = 18000
 spring.application.name=security-service
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
-management.endpoint.info.enabled=true
-management.endpoints.web.exposure.include=health,metrics,prometheus,loggers
-management.metrics.enable.jvm=true
