--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-
 #Profile
-spring.profiles.active=dev
-#spring.profiles.active=prod
+#spring.profiles.active=dev
+spring.profiles.active=prod
+
 #Tomcat
 spring.datasource.tomcat.initial-size=50
 spring.datasource.tomcat.max-wait=10000
@@ -10,16 +10,17 @@ spring.datasource.tomcat.max-idle=20
 spring.datasource.tomcat.min-idle=10
 spring.datasource.tomcat.default-auto-commit=true
 spring.datasource.tomcat.test-on-borrow=false
-#Logging
-logging.level.root=INFO
-logging.level.org.springframework.web=DEBUG
-logging.level.ru.centerinform.webhook=TRACE
-logging.level.org.testcontainers=DEBUG
-logging.file.name=logs/serv.log
+
 #Messages
 spring.messages.always-use-message-format=false
 spring.messages.basename=messages/messages
 spring.messages.encoding=UTF-8
 spring.messages.fallback-to-system-locale=true
+
 #Open-api
 springdoc.api-docs.path=/sales-docs
+
+#Prometheus
+management.endpoint.info.enabled=true
+management.endpoints.web.exposure.include=health,metrics,prometheus,loggers
+management.metrics.enable.jvm=true
